startkde/plasma-session/startup.cpp
@@ -16,6 +16,8 @@
 
 #include "debug.h"
 
+#include <unistd.h>
+
 #include "kcminit_interface.h"
 #include "kded_interface.h"
 #include "ksmserver_interface.h"
@@ -36,9 +38,11 @@
 #include <QStandardPaths>
 #include <QTimer>
 
+#include "sessiontrack.h"
 #include "startupadaptor.h"
 
 #include "../config-startplasma.h"
+#include "startplasma.h"
 
 class Phase : public KCompositeJob
 {
@@ -136,6 +140,8 @@ void SleepJob::start()
 Startup::Startup(QObject *parent)
     : QObject(parent)
 {
+    Q_ASSERT(!s_self);
+    s_self = this;
     new StartupAdaptor(this);
     QDBusConnection::sessionBus().registerObject(QStringLiteral("/Startup"), QStringLiteral("org.kde.Startup"), this);
     QDBusConnection::sessionBus().registerService(QStringLiteral("org.kde.Startup"));
@@ -163,6 +169,8 @@ Startup::Startup(QObject *parent)
     }
 
     KJob *phase1 = nullptr;
+    m_lock.reset(new QEventLoopLocker);
+
     const QVector<KJob *> sequence = {
         new StartProcessJob(QStringLiteral("kcminit_startup"), {}),
         new StartServiceJob(QStringLiteral("kded5"), {}, QStringLiteral("org.kde.kded5"), {}),
@@ -204,12 +212,36 @@ void Startup::finishStartup()
 {
     qCDebug(PLASMA_SESSION) << "Finished";
     upAndRunning(QStringLiteral("ready"));
+
+    playStartupSound(*this);
+    new SessionTrack(m_processes);
+    deleteLater();
 }
 
 void Startup::updateLaunchEnv(const QString &key, const QString &value)
 {
     qputenv(key.toLatin1(), value.toLatin1());
 }
+
+bool Startup::startDetached(const QString &program, const QStringList &args)
+{
+    QProcess *p = new QProcess();
+    p->setProgram(program);
+    p->setArguments(args);
+    return startDetached(p);
+}
+
+bool Startup::startDetached(QProcess *process)
+{
+    process->start();
+    const bool ret = process->waitForStarted();
+    if (ret) {
+        m_processes << process;
+    }
+    return ret;
+}
+
+Startup *Startup::s_self = nullptr;
 
 KCMInitJob::KCMInitJob()
     : KJob()
@@ -336,7 +368,7 @@ void AutoStartAppsJob::start()
             }
             qCInfo(PLASMA_SESSION) << "Starting autostart service " << serviceName << arguments;
             auto program = arguments.takeFirst();
-            if (!QProcess::startDetached(program, arguments))
+            if (!Startup::self()->startDetached(program, arguments))
                 qCWarning(PLASMA_SESSION) << "could not start" << serviceName << ":" << program << arguments;
         } while (true);
     });
@@ -344,7 +376,7 @@ void AutoStartAppsJob::start()
 
 StartServiceJob::StartServiceJob(const QString &process, const QStringList &args, const QString &serviceId, const QProcessEnvironment &additionalEnv)
     : KJob()
-    , m_process(new QProcess(this))
+    , m_process(new QProcess)
     , m_serviceId(serviceId)
     , m_additionalEnv(additionalEnv)
 {
@@ -367,7 +399,7 @@ void StartServiceJob::start()
         return;
     }
     qCDebug(PLASMA_SESSION) << "Starting " << m_process->program() << m_process->arguments();
-    if (!m_process->startDetached()) {
+    if (!Startup::self()->startDetached(m_process)) {
         qCWarning(PLASMA_SESSION) << "error starting process" << m_process->program() << m_process->arguments();
         emitResult();
     }
